--- a/LojaVirtual/src/main/resources/application.properties
+++ b/LojaVirtual/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
